--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/master"
+    android:background="@drawable/master4"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoSizeTextType="none"
+        android:fontFamily="@font/amaranth"
         android:text="Inicio de sesión"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -31,10 +32,12 @@
         android:layout_marginBottom="24dp"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Usuario:"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -52,10 +55,12 @@
         android:layout_marginBottom="48dp"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Contraseña:"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
@@ -69,6 +74,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_blue_light"
         android:cursorVisible="false"
+        android:drawableRight="@drawable/login"
+        android:fontFamily="@font/amaranth"
         android:text="Iniciar sesión"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
