--- a/app/src/main/res/layout/activity_crud_tecnicos.xml
+++ b/app/src/main/res/layout/activity_crud_tecnicos.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Usuario:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Puesto:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Apellidos:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -82,6 +85,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Nombre:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -100,6 +104,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
+        android:fontFamily="@font/amaranth"
         android:hint="Contraseña:"
         android:inputType="textPassword"
         android:textColor="@color/black"
